--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
           </div>
         </div>
         <div class="ad face">
-          <div class="ad__front face flex">taco</div>
+          <div class="ad__front face flex">Ashika</div>
           <div class="ad__back face"> </div>
           <div class="ad__right face"> </div>
           <div class="ad__left face"> </div>
